k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-java
spec:
  selector:
    matchLabels:
      app: function-java
  template:
    metadata:
      labels:
        app: function-java
    spec:
      serviceAccountName: lenneflow-sa
      hostNetwork: true
      containers:
        - name: admin
          image: lenneflow/function-java
          ports:
            - containerPort: 8080
              hostPort: 8080
