k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-java
spec:
  type: NodePort
  selector:
    app: function-java
  ports:
    - port: 8080
      targetPort: 8080
