k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worker-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: lenneflowworker.ganemtore.bf
      http:
        paths:
          - path: /api/functionjava
            pathType: Prefix
            backend:
              service:
                name: function-java
                port:
                  number: 8080
